# deployment-pipeline-challenge

./: README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml
.github/workflows/: pipeline.yaml
acceptance-tests/robot-framework/Resources/UI/selenium/: CustomKeywords.robot
acceptance-tests/robot-framework/Tests/API/: Test_API.robot
acceptance-tests/robot-framework/Tests/UI/: Test_Dashboard.robot
api/: Dockerfile  pyproject.toml
api/django_api/: models.py  serializers.py  settings.py  urls.py  views.py
api/django_api/migrations/: 0001_initial.py
api/flask_api/: Dockerfile  csv_wrapper.py  order_controller.py  order_transformer.py  orders.py  pyproject.toml
api/flask_api/models/: order.py
api/flask_api/storage/: source.csv
api/flask_api/tests/: test_csv_wrapper.py  test_order_controller.py  test_transform.py
api/flask_api/tests/mockdata/: multiple_logs_per_order.csv  source.csv
api/flask_api/tests/mockdata/output/: result.json
api/tests/: test.py
storage/: source.csv
ui/: compose.yaml
ui/react-app/: Dockerfile  package-lock.json
ui/react-app/src/: App.css  App.js  Table.test.js  TableBody.js  TableHeaders.js
